test/param/ferguson/field-name-not-in-range.good
$CHPL_HOME/modules/standard/Reflection.chpl:47: In function 'getFieldName':
$CHPL_HOME/modules/standard/Reflection.chpl:48: error: '2' is not a valid field number for R
field-name-not-in-range.chpl:7: Function 'getFieldName' instantiated as: getFieldName(type t = R, param i = 2)
