test/param/ferguson/field-name-not-in-range.chpl
use Reflection;

record R {
  var x:int;
}

var s = getFieldName(R, 1);

